# voiceinteraction

./: .gitignore  CONTRIBUTING.md  README.md  marketing-plan.md  w3c.json
source/: .gitignore  SOURCE.md
source/w3cipa/: CMakeLists.txt  CMakePresets.json  vcpkg.json  w3cipa.cpp  w3cipa.h  w3cipa_global.h
source/w3cipa/CMake/: FindLog4cplus.cmake  FindW3CIPAFramework.cmake  Findnlohmann_json.cmake  Findstduuid.cmake  Utilities.cmake
source/w3cipa/CMake/Dependencies/: libcurl-CMakeLists.txt  liblog4cplus-CMakeLists.txt  libnlohmann_json-CMakeLists.txt  libopenssl-CMakeLists.txt  libstduuid-CMakeLists.txt  libtaocppjson-CMakeLists.txt
source/w3cipa/Interfaces/w3c/voiceinteraction/ipa/: AudioData.h  AudioDeliveryType.h  AudioEncoding.h  CMakeLists.txt  ClientInput.cpp  ClientInput.h  ClientResponse.h  ClientRespsonse.h  IPAProvider.h  IPAService.h  MetaData.h  MultiModalInput.h  MultiModalInputs.h  MultiModalOutput.h  MultiModalOutputs.h  ProviderRegistry.h  ProviderSelectionService.h  RequestId.h  SessionId.h  Timestamp.h
source/w3cipa/include/w3c/voiceinteraction/ipa/: AudioData.h  ClientInput.h  ClientRequest.h  ClientResponse.h  ExternalClientResponse.h  IOType.h  IPAProvider.h  IPAService.h  InputModalityComponent.h  MetaData.h  ModalityComponent.h  ModalityManager.h  ModalityType.h  MultiModalInput.h  MultiModalInputs.h  MultiModalOutput.h  MultiModalOutputs.h  OutputModalityComponent.h  ProviderRegistry.h  ProviderSelectionService.h  RequestId.h  SemanticInterpretation.h  SessionId.h  Timestamp.h
source/w3cipa/include/w3c/voiceinteraction/ipa/client/: IOType.h  ModalityComponent.h  ModalityManager.h  OutputModalityComponent.h
source/w3cipa/include/w3c/voiceinteraction/ipa/dialog/: IOType.h  InputModalityComponent.h  InputModalityComponentListener.h  ModalityComponent.h  ModalityManager.h  OutputModalityComponent.h
source/w3cipa/sources/: CMakeLists.txt  log4cplus.properties  main.cpp
source/w3cipa/sources/w3c/voiceinteraction/ipa/: CMakeLists.txt  IntegerRequestId.cpp  IntegerRequestId.h  TextModalityType.cpp  TextModalityType.h  TextMultiModalInput.cpp  TextMultiModalInput.h  TextMultiModalOutput.cpp  TextMultiModalOutput.h  UUIDSessionId.cpp  UUIDSessionId.h  textmultimodalinput.cpp  textmultimodalinput.h  textmultimodaloutput.cpp  textmultimodaloutput.h
source/w3cipa/sources/w3c/voiceinteraction/ipa/client/: CMakeLists.txt  ConsoleTextModalityComponent.cpp  ConsoleTextModalityComponent.h  ReferenceIPAService.cpp  ReferenceIPAService.h  TakeFirstInputModalityComponentListener.cpp  TakeFirstInputModalityComponentListener.h
source/w3cipa/sources/w3c/voiceinteraction/ipa/dialog/: CMakeLists.txt  ConsoleTextModalityComponent.cpp  ConsoleTextModalityComponent.h  ReferenceIPAService.cpp  ReferenceIPAService.h  TakeFirstInputModalityComponentListener.cpp  TakeFirstInputModalityComponentListener.h  referenceipaservice.cpp  referenceipaservice.h
source/w3cipa/w3cipachatgptipaprovider/: CMakeLists.txt  ChatGPTIPAProvider.json
source/w3cipa/w3cipademo/: CMakeLists.txt  log4cplus.properties
source/w3cipa/w3cipademo/src/: main.cpp
source/w3cipa/w3cipaframework/: CMakeLists.txt
source/w3cipa/w3cipaframework/doc/legal/: license.txt
source/w3cipa/w3cipaframework/include/w3c/voiceinteraction/ipa/: AudioData.h  AudioDeliveryType.h  AudioEncoding.h  CallResult.h  ClientInput.h  ClientRequest.h  ClientResponse.h  CombinedId.h  DialogManager.h  ErrorMessage.h  ExternalClientInput.h  ExternalClientResponse.h  ExternalClientResponseListener.h  ExternalIPAResponse.h  IPAData.h  IPADataProcessor.h  IPARequest.h  IPAResponse.h  Language.h  LanguageDependent.h  MetaData.h  ModalityType.h  MultiModalData.h  MultiModalDataCollection.h  MultiModalInput.h  MultiModalInputs.h  MultiModalOutput.h  MultiModalOutputs.h  RequestId.h  SessionId.h  TextModalityType.h  Timestamp.h  VoiceModalityType.h
source/w3cipa/w3cipaframework/include/w3c/voiceinteraction/ipa/client/: CaptureModalityComponent.h  CaptureModalityComponentListener.h  IOType.h  InputModalityComponent.h  InputModalityComponentListener.h  InputNotificationMediator.h  InteractionManager.h  InteractionType.h  ModalityComponent.h  ModalityManager.h  MulitModalCaptureSynchronisationStrategy.h  MulitModalCaptureSynchronizationStrategy.h  OutputModalityComponent.h  PresentationModalityComponent.h
source/w3cipa/w3cipaframework/include/w3c/voiceinteraction/ipa/dialog/: IPAService.h
source/w3cipa/w3cipaframework/src/w3c/voiceinteraction/ipa/: ClientRequest.cpp  ClientResponse.cpp  CombinedId.cpp  DialogManager.cpp  ErrorMessage.cpp  ExternalClientResponse.cpp  ExternalIPAResponse.cpp  IPAData.cpp  IPADataProcessor.cpp  IPARequest.cpp  IPAResponse.cpp  Language.cpp  Metadata.cpp  ModalityType.cpp  MultiModalData.cpp  MultiModalDataCollection.cpp  MultiModalInput.cpp  MultiModalInputs.cpp  MultiModalOutput.cpp  MultiModalOutputs.cpp  RequestId.cpp  SessionId.cpp  TextModalityType.cpp  Timestamp.cpp  VoiceModalityType.cpp
source/w3cipa/w3cipaframework/src/w3c/voiceinteraction/ipa/client/: CaptureModalityComponent.cpp  CaptureModalityComponentListener.cpp  InputModalityComponent.cpp  InputModalityComponentListener.cpp  InputNotificationMediator.cpp  InteractionManager.cpp  ModalityComponent.cpp  ModalityManager.cpp  MulitModalCaptureSynchronisationStrategy.cpp  MulitModalCaptureSynchronizationStrategy.cpp  OutputModalityComponent.cpp  PresentationModalityComponent.cpp
source/w3cipa/w3cipaframework/src/w3c/voiceinteraction/ipa/dialog/: IPAService.cpp
source/w3cipa/w3cipareferenceimplementation/: CMakeLists.txt
source/w3cipa/w3cipareferenceimplementation/include/w3c/voiceinteraction/ipa/reference/: IntegerRequestId.h  TextModalityType.h  TextMultiModalData.h  TextMultiModalInput.h  TextMultiModalOutput.h  UUIDSessionId.h
source/w3cipa/w3cipareferenceimplementation/src/: main.cpp
source/w3cipa/w3cipareferenceimplementation/src/w3c/voiceinteraction/ipa/reference/: IntegerRequestId.cpp  TextModalityType.cpp  TextMultiModalData.cpp  TextMultiModalInput.cpp  TextMultiModalOutput.cpp  UUIDSessionId.cpp
(+79 files in other folders)
